[tool.poetry]
name = "poetryproject"
version = "0.1.0"
description = ""
authors = ["viktoriya <tkvika@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.2.0"
selene = "2.0.0b14"

[tool.poetry.group.dev.dependencies]
pylint = "^2.15.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
